--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1 class="title">日本全国を自分の足で旅しよう！</h1>
     <p>4泊5日中国地方＆大阪奈良旅行参加者<span class="bosyuu">募集中！！</span></p>
     <p>楽しいよ♪</p>
+    <P>はよ行きて～</p>
   </body>
 </html>
