--- a/index.html
+++ b/index.html
@@ -6,9 +6,46 @@
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
-    <h1 class="title">日本全国を自分の足で旅しよう！</h1>
-    <p>4泊5日中国地方＆大阪奈良旅行参加者<span class="bosyuu">募集中！！</span></p>
-    <p>楽しいよ♪</p>
-    <P>はよ行きて～</p>
+    <div class="header">
+      <div class="header-logo">Photravel Japan!!</div>
+      <div class="header-list">
+        <a class="listname1">Photravelとは</a>
+        <a>写真スポットを探す</a>
+        <a>お問い合わせ</a>
+      </div>
+    </div>
+    <div class="maincontainer">
+      <h1 class="title">日本全国を自分の足で旅しよう！</h1>
+      <p class="subtitle">日本全国をカメラとともに旅しよう！！</p>
+    </div>
+    <div class="contentscontainer">
+      <div class="meaning contents">
+        <h1>Photravelとは</h1>
+        <h2>Photravelとは”カメラで写真を撮りながらする旅"のことです。写真という英単語「photo」と旅という英単語「travel」を重ねた造語です。写真を撮るということはそれ
+          自体が非常に楽しい行為ですし後から撮った写真を見ることで当時のことを思い出すことができるツールにもなります。旅行先でいい写真を撮りたいという
+          思いを持つ皆さんに各地のフォトスポットをお届けし、より充実した旅行を楽しんでいただくというのが本サイトのコンセプトです。ぜひ旅行計画
+          に役立てていただければと思います！！
+        </h2>
+      </div>
+      <div class="search contents">
+        <h1>さっそくフォトスポットを探す</h1>
+        <h2>本サイトでは地域、写真のジャンル、季節などの様々な分類を設けておりますのでお客様が撮りたい写真に最適なフォトスポットを必ずにつけていただける
+          ようになっております。画面上部の「写真スタジオを探す」というボタンを押してさっそくフォトスポットをお探しください！
+        </h2>
+      </div>
+      <div class="contact contents">
+        <h1>お問合せについて</h1>
+        <h2>各フォトスポットの詳細に関するお問合せやサイトの改善点、フォトスポット掲載の御依頼などはお気軽に当サイトにお問い合わせください。画面上部の「お問い合わせ」
+          をクリックしていただくとお問い合わせフォームに移動していただけます。また当サイトの公式Twitter、InstagramもございますのでそちらのDMからでもお問合せいただく
+          ことが可能です。お気軽にお問い合わせください。今後も当サイトをよろしくお願いいたします。
+        </h2>
+      </div>
+    </div>
+    <div class="footer">
+      <div class="footer-logo">Photoravel Japan</div>
+      <div class="footer-list">
+        
+      </div>
+    </div>
   </body>
 </html>
