--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Progate</title>
+    <title>Photravel</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
   <body>
